# python-class

./: .buildinfo  .editorconfig  .exrc  .gitignore  .pre-commit-config.yaml  .replit  .stylelintrc.json  README.md  demo.cast  genindex.html  hello.txt  index.html  intro.html  main.py  objects.inv  orphans.html  output  package-lock.json  package.json  player.html  py-modindex.html  pypet.py  pyproject.toml  search.html  searchindex.js  setup.cfg  toc.html
.github/workflows/: docs.yml
.todo/: book-meta.txt  bottles-of-beer.md  data.txt  done.txt  exercises.txt  exercises.txt.bak  fundamentals.txt  in-depth.txt  lessons.txt  lessons.txt.bak  projects.txt  quiz.txt  quiz.txt.bak  report.txt  todo.txt  todo.txt.bak  tools.txt  trello.txt
_downloads/305a038a9cf79ae274f42e4b91f58671/: loops.csv
_downloads/48e5c39602b29b2029a60b2e7b7d210d/: conditional-statements.csv
_downloads/5b51c9e8380c18fc2ee8d866662d01d8/: todo.md
_downloads/7fef5027c3b2e735a02fdbf1dd63fbad/: paths.csv
_downloads/e40a7e524d2ec09e50dbc27c792500bf/: types.csv
_sources/: index.ipynb  intro.ipynb  intro.md  orphans.md  toc.md
_sources/exercises/: adventure.ipynb  adventure.md  flashcards.ipynb  flashcards.md  fundamentals.md  list-exercises.md  list-string-exercises.md  program-flow.md
_sources/guides/: git-concepts.md  mac.md
_sources/lessons/: 03_guess_the_number.ipynb  05_dragon_realm.md  battle.ipynb  battle.md  cli.ipynb  cli.md  conditional-statements.ipynb  conditional-statements.md  data-introspection.ipynb  data-introspection.md  dates.ipynb  dates.md  dragon-realm.ipynb  dragon-realm.md  expressions.ipynb  expressions.md  expressions_vs_statements.md  file-io.ipynb  file-io.md  file-system-operations.ipynb  files.md  flow-and-loops.md  flow-control.ipynb  flow-control.md  flow.ipynb  flow.md  for-loops.ipynb  for-loops.md  functions.ipynb  functions.md  fundamentals.md  game-book.md  loops.ipynb  loops.md  paths.md  problem-solving.ipynb  problem-solving.md  reading-code.ipynb  (+15 more)
_static/: custom.css  custom.js  pygments.css  x-frame-bypass.js
computer-games/: chapter_1.py  chapter_2.py  chapter_3.py
data/: powerball.json
docs/: .gitignore  .requirements.txt  _config.yml  _toc.yml  chapter_3.md  chapter_5.md  git-concepts.md  git-usage.md  glossary.md  homework_1.md  index.md  intro.md  list-exercises.md  list-string-exercises.md  player.md  replit-tips.md  setup-version-control.md  shell_01.md  tips.md  toc.md  todo.md  vscode-intro.md
exercises/: adventure.html  flashcards.html  fundamentals.html  list-exercises.html  list-string-exercises.html  program-flow.html  program_flow.html  richter.html
guides/: console.html  git-concepts.html  git-on-replit.html  mac.html  poetry.html  python_shell.html  replit.html  vscode-intro.html
lessons/: 03_guess_the_number.html  05_dragon_realm.html  battle.html  cli.html  conditional-statements.html  data-introspection.html  dates.html  dragon-realm.html  expressions.html  expressions_vs_statements.html  file-io.html  file-system-operations.html  files.html  flow-and-loops.html  flow-control.html  flow.html  for-loops.html  functions.html  fundamentals.html  game-book.html  imports.html  loops.html  misc.html  paths.html  problem-solving.html  reading-code.html  statements.html  string-formatting-part-1.html  string-formatting-part-2.html  syntax.html  tutorial.html  variables.html  web-apis.html  while-loops.html
misky/: cards.py  messenger.py  script-template.py
practices/: data-inspection.html  debugging.html  problem-solving.html  testing.html
pythonclass/: battle.py  messenger.py  pets.py  pypet.py  template.py
qcc-game-analogy/: mario.json  random.json
reference/: dicts.html  glossary.html  lists.html  recommended.html
scss/: admonitions.scss  cards.scss  code.scss  colors.scss  custom-admonitions.scss  exercise-admonition.scss  glossary.scss  headings.scss  inline.scss  layout.scss  margins-sidebars.scss  roles.scss  tables.scss  tabs.scss  text-blocks.scss  variables.scss
setup/: make-shellrc
tests/: test_card.py  test_docstrings.py  test_fieldlists.py  test_flashcards.py  test_greeting.py  test_palindrome.py  test_weather.py  weather.json
tools/: acp  adiff  asdf.html  avim  awatch  binpath.py  build  bump  cast  deploy  difffin  difflast  generate.py  git.html  homebrew.html  ipython.html  lnk  mac.html  mklive  play  poetry.html  prebuild  pyenv.html  pyinstall  pytest.html  python-shell.html  reading-code.tpl.md  replit.html  sb  screencasts.html  scss-build  serve  stylelint  terminal.html  vscode.html  watch  windows.html
workshops/: 2021-01-25-palindrome.py  2021-01-25-prime.py  2021-09-06-dictionaries.py  2021-10-04-functions.py  2021-10-06-functions-review.py  2021-10-06-oop.py  2021-10-11-functions-and-colors.py  2021-10-25-strings-and-expressions.py  2021-10-27-oop-inheritance.py  2021-11-01-expression-exercises.py  2021-11-02-adventure-dicts.py  2021-11-08-expression-warmup.py  2021-11-08-strings-review.py  2021-11-09-dictionary-review.py  2021-11-11-functional.py  2021-11-29-exercises.py  2021-11-30-dictionary-review.py  2021-11-30-expression-exercises.py  2021-12-06-strings-review-join-split.txt  2021-12-08-aggregate-exercises.py  2021-12-08-aggregate-functions.py  2021-12-15-in-depth-datetimes.py  2021-12-20-fundamentals-char-encoding.py  2021-12-27-fundamentals-encoding-join-split.py  2022-01-03-fundamentals-expression-exercise.py  2022-01-17-fundamentals-datetime.py  2022-01-19-in-depth-oop.py  2022-01-24-fundamentals-deck-exercise.py  2022-01-31-fundamentals-datetime-review-exercise.py  2022-02-02-oop-card.py  2022-02-07-datetime-exercise.py  2022-02-21-list-fav-movies-exercise.py  2022-04-06-live-class-methods.py  __init__.py
(+888 files in other folders)
