[tool.poetry]
name = "python-class"
version = "0.1.1"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.11"
requests = "^2.24.0"
colorful = "^0.5.4"
tabulate = "^0.8.7"
click = "^7.1.2"
colorama = "^0.4.4"
more_itertools = "^8.6.0"
blessed = "^1.17.12"
sphinx-exercise = "^0.4.0"
pygments-pytest = "^2.2.0"
sphinx-panels = "^0.5.2"
jupytext = "<1.10.0"
pandas = "^1.2.4"
sphinx-code-highlighter = "^0.0.3"
console = "^0.9907"
sphinx-tabs = "^3.2.0"
lolcat = "^1.4"
sphinxcontrib-runcmd = "^0.2.0"
jupyterthemes = "^0.20.0"

[tool.poetry.dev-dependencies]
xdoctest = "^0.15.0"
black = "^20.8b1"
jupyter = "^1.0.0"
ipython = "^7.19.0"
neovim = "^0.3.1"
pylama = "^7.7.1"

# ---------------------------------------------------------------------
# docs
# ---------------------------------------------------------------------

# ghp = { file = "vendor/gh-pages-cli/dist/ghp-0.1.2-py3-none-any.whl", optional = true }
# jupyter-book = { git = "https://github.com/executablebooks/jupyter-book.git" }
# jupyter-book = { file = "vendor/jupyter-book/dist/jupyter_book-0.8.3-py3-none-any.whl", optional = true }
docutils = { version = "^0.16", optional = true }
sphinx = { version = "^3.3.1", optional = true }

# required for jupyter-book as of 0.8.3
# https://github.com/executablebooks/jupyter-book/issues/1137
# sphinxcontrib-bibtex = { version = "<2.0.0", optional = true }

# required for jupyter-book as of around 0.8.3
sphinx-book-theme = "==0.1.7"
zipp = { version = "^3.4.0", optional = true }
pytest = "^6.2.1"
autopep8 = "^1.5.4"
jupyter-book = "^0.10.0"
sphinxcontrib-bibtex = "^2.1.4"
mdit-py-plugins = "^0.2.5"
sphinxcontrib-kroki = "^1.2.1"
asciinema = { version = "^2.0.2", markers = "sys_platform != 'win32'" }
ipdb = "^0.13.9"
rich = "^10.7.0"
pylint = "^2.12.2"
pdbr = "^0.7.0"
pytest-clarity = "^1.0.1"
pdbpp = "^0.10.3"
pytest-only = "^1.2.2"
pytest-parametrization = "^2021.4.1"

[tool.poetry.extras]
docs = [
  # "ghp",
  "jupyter-book",
  "docutils",
  "sphinx",
  "sphinxcontrib-bibtex",
  "zipp",
  "sphinxcontrib-kroki",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vvx"

[build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
