[tool.poetry]
name = "python-class"
version = "0.1.1"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.11"
requests = "*"
colorful = "*"
tabulate = "*"
click = "*"
colorama = "*"
more_itertools = "*"
blessed = "*"
pandas = "*"
console = "*"
lolcat = "*"
asciinema = { version = "*", markers = "sys_platform != 'win32'" }
rich = "*"


# ---------------------------------------------------------------------
# docs {{{

jupyterthemes = "*"
sphinxcontrib-runcmd = "*"
sphinx-code-highlighter = "*"
jupytext = "*"
pygments-pytest = "*"
sphinx-book-theme = "*"
sphinxcontrib-bibtex = "*"
mdit-py-plugins = "*"
sphinxcontrib-kroki = "*"
sphinx-exercise = "*"
docutils = "*"
Sphinx = "*"
sphinx-tabs = "*"
jupyter-book = "*"

# }}} /docs
# ---------------------------------------------------------------------
sphinx-jinja = "^2.0.2"
selenium = "^4.8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
isort = "*"
flake8 = "*"
xdoctest = "*"
black = "*"
jupyter = "*"
ipython = "*"
neovim = "*"
pylama = "*"
pytest = "*"
ipdb = "*"
pylint = "*"
pdbr = "*"
pytest-clarity = "*"
pdbpp = "*"
pytest-only = "*"
pytest-parametrization = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vvx"

[tool.isort]
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
# profile = "black"
# multi_line_output = 3
# force_grid_wrap = 0
# use_parentheses = true

[build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
