[tool.poetry]
name = "python-class"
version = "0.1.1"
description = "The lessons and code related to the Python class that I've been teaching."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.16"
blessed = "*"
colorama = "*"
colorful = "*"
console = "*"
click = "*"
lolcat = "*"
pandas = "*"
rich = "*"
requests = "*"
tabulate = "*"

[tool.poetry.group.docs.dependencies]
jupyter-book = "0.15.1"
jupyterthemes = "*"
jupytext = "*"

sphinxcontrib-kroki = "*"
sphinxcontrib-runcmd = "*"
sphinx-code-highlighter = "*"
sphinx-exercise = "*"
sphinx-jinja = "*"
sphinx-tabs = "*"

pygments-ansi-color = "*"
pygments-pytest = "*"

asciinema = { version = "*", markers = "sys_platform != 'win32'" }
more_itertools = "*"
selenium = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
ipdb = "*"
ipython = "*"
isort = "*"
neovim = "*"
pdbpp = "*"
pdbr = "*"
pre-commit = "*"
pylama = "*"
pylint = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-clarity = "*"
pytest-only = "*"
pytest-parametrization = "*"
xdoctest = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vvx"

[tool.isort]
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
# profile = "black"
# multi_line_output = 3
# force_grid_wrap = 0
# use_parentheses = true

[build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
